# Superdog

./: CMakeLists.txt  README.md
include/: counting.h  dancing.h  dog.h  swimming.h  talent.h
src/: CMakeLists.txt  main.cpp
